--- a/environment.yml
+++ b/environment.yml
@@ -40,3 +40,6 @@ dependencies:
   - typing_extensions
   - adlfs
   - importlib_metadata
+  - pre-commit
+  - pip:
+    - git+https://github.com/jupyter-server/jupyter_releaser.git@v2
