Hard-code RH_REPOSITORY.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -162,3 +162,4 @@ jobs:
           token: ${{ secrets.GITHUB_TOKEN }}
         env:
           RH_BRANCH: ${{ steps.branch-name.outputs.current_branch }}
+          RH_REPOSITORY: janjagusch/quetz
