--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -163,3 +163,4 @@ jobs:
         env:
           RH_BRANCH: ${{ steps.branch-name.outputs.current_branch }}
           RH_REPOSITORY: janjagusch/quetz
+          RH_REF: ${{ steps.branch-name.outputs.current_branch }}
