Add pyright to pre-commit hooks.

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -32,3 +32,7 @@ repos:
           - types-toml
           - types-ujson
         args: [--show-error-codes]
+  - repo: https://github.com/RobertCraigie/pyright-python
+    rev: v1.1.294
+    hooks:
+    - id: pyright
