Add pyright config.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -41,3 +41,8 @@ tag_template = "v{new_version}"
 [[tool.tbump.file]]
 src = "quetz/_version.py"
 version_template = '({major}, {minor}, {patch}, "{channel}", "{release}")'
+
+[tool.pyright]
+include = ["quetz"]
+reportMissingImports = true
+reportMissingTypeStubs = true
