Set venv path in pyproject.toml.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -47,4 +47,5 @@ include = ["quetz"]
 exclude = ["typings"]
 reportMissingImports = true
 reportMissingTypeStubs = false
+venvPath= "."
 venv = ".venv"
