--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -32,3 +32,7 @@ repos:
           - types-toml
           - types-ujson
         args: [--show-error-codes]
+  - repo: https://github.com/Quantco/pre-commit-mirrors-prettier
+    rev: 2.7.1
+    hooks:
+      - id: prettier-conda
