--- a/pyproject.toml
+++ b/pyproject.toml
@@ -52,7 +52,7 @@ reportOptionalMemberAccess = false
 reportOptionalOperand = false
 reportOptionalSubscript = false
 reportPrivateImportUsage = false
-reportUnboundVariable = false
+reportUnboundVariable = true
 reportUndefinedVariable = false
 venv = ".venv"
 venvPath= "."
