Add pyright pre-commit hook (#607)
* Add pyright to pre-commit hooks.

* Add pyright config.

* Update pre-commit config.

* Debug.

* Debug.

* Debug.

* Debug.

* Add pytest.

* Add prettier pre-commit hook.

* Update lint CI workflow.

* Add .env and .envrc to gitignore.

* Satify prettier.

* Specify prettier version.

* Install venv into directory (necessary for pyright).

* Don't specify entry for pyright.

* Set venv path in pyproject.toml.

* Don't specify exclude.

* Ignore enough pyright checks to make pre-commit pass.

* Revert "Install venv into directory (necessary for pyright)."

This reverts commit c1bde71d9181e339ee3d6833c3950580db6ea2fa.

* Give conda env a name again.

* New line.

* Add comment.

--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -2,12 +2,17 @@ name: lint
 
 on: [push, pull_request]
 
+defaults:
+  run:
+    shell: bash -el {0}
+
 jobs:
   lint:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
       - uses: mamba-org/provision-with-micromamba@v15
+      - run: ln -s "${CONDA_PREFIX}" .venv # Necessary for pyright.
       - uses: pre-commit/action@v2.0.0
         with:
           extra_args: --all-files --show-diff-on-failure
