--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -36,3 +36,7 @@ repos:
     rev: 2.7.1
     hooks:
       - id: prettier-conda
+  - repo: https://github.com/RobertCraigie/pyright-python
+    rev: v1.1.294
+    hooks:
+      - id: pyright
