--- a/environment.yml
+++ b/environment.yml
@@ -41,5 +41,6 @@ dependencies:
   - adlfs
   - importlib_metadata
   - pre-commit
+  - pytest
   - pip:
       - git+https://github.com/jupyter-server/jupyter_releaser.git@v2
