Enable pyright reportPrivateImportUsage.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -51,7 +51,7 @@ reportMissingTypeStubs = false
 reportOptionalMemberAccess = false
 reportOptionalOperand = false
 reportOptionalSubscript = false
-reportPrivateImportUsage = false
+reportPrivateImportUsage = true
 reportUnboundVariable = false
 reportUndefinedVariable = false
 venv = ".venv"
