Enable pyright reportOptionalSubscript.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -50,7 +50,7 @@ reportMissingModuleSource = false
 reportMissingTypeStubs = false
 reportOptionalMemberAccess = false
 reportOptionalOperand = false
-reportOptionalSubscript = false
+reportOptionalSubscript = true
 reportPrivateImportUsage = true
 reportUnboundVariable = false
 reportUndefinedVariable = false
