Enable pyright reportOptionalOperand.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -49,7 +49,7 @@ reportMissingImports = false
 reportMissingModuleSource = false
 reportMissingTypeStubs = false
 reportOptionalMemberAccess = false
-reportOptionalOperand = false
+reportOptionalOperand = true
 reportOptionalSubscript = true
 reportPrivateImportUsage = true
 reportUnboundVariable = false
