Enable pyright reportOptionalMemberAccess.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -48,7 +48,7 @@ reportGeneralTypeIssues = false
 reportMissingImports = false
 reportMissingModuleSource = false
 reportMissingTypeStubs = false
-reportOptionalMemberAccess = false
+reportOptionalMemberAccess = true
 reportOptionalOperand = true
 reportOptionalSubscript = true
 reportPrivateImportUsage = true
