Enable pyright reportMissingModuleSource.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -46,7 +46,7 @@ version_template = '({major}, {minor}, {patch}, "{channel}", "{release}")'
 include = ["quetz"]
 reportGeneralTypeIssues = false
 reportMissingImports = false
-reportMissingModuleSource = false
+reportMissingModuleSource = true
 reportMissingTypeStubs = false
 reportOptionalMemberAccess = true
 reportOptionalOperand = true
