--- a/environment.yml
+++ b/environment.yml
@@ -42,5 +42,10 @@ dependencies:
   - importlib_metadata
   - pre-commit
   - pytest
+  - pytest-mock
+  - rq
+  - libcflib
+  - mamba
+  - conda-content-trust
   - pip:
       - git+https://github.com/jupyter-server/jupyter_releaser.git@v2
