Fix unbound variables (#609)
* Add pyright to pre-commit hooks.

* Add pyright config.

* Update pre-commit config.

* Debug.

* Debug.

* Debug.

* Debug.

* Add pytest.

* Add prettier pre-commit hook.

* Update lint CI workflow.

* Add .env and .envrc to gitignore.

* Satify prettier.

* Specify prettier version.

* Install venv into directory (necessary for pyright).

* Don't specify entry for pyright.

* Set venv path in pyproject.toml.

* Don't specify exclude.

* Ignore enough pyright checks to make pre-commit pass.

* Revert "Install venv into directory (necessary for pyright)."

This reverts commit c1bde71d9181e339ee3d6833c3950580db6ea2fa.

* Give conda env a name again.

* New line.

* Add comment.

* Enable reportUnboundVariable.

* Satisfy reportUnboundVariable.

* Satify pyright.

* Pass tests.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -52,7 +52,7 @@ reportOptionalMemberAccess = true
 reportOptionalOperand = true
 reportOptionalSubscript = true
 reportPrivateImportUsage = true
-reportUnboundVariable = false
+reportUnboundVariable = true
 reportUndefinedVariable = false
 venv = ".venv"
 venvPath= "."
