--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -43,7 +43,9 @@ jobs:
       - uses: actions/checkout@v2
 
       - name: install mamba
-        uses: mamba-org/provision-with-micromamba@main
+        uses: mamba-org/setup-micromamba@v1
+        with:
+          environment-file: environment.yml
       - name: test quetz
         shell: bash -l -eo pipefail {0}
         env:
