chore: move configurations to `pyproject.toml` (#624)
* chore: move mypy configuration to pyproject.toml

* chore: move coverage configuration to pyproject.toml

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -56,3 +56,17 @@ reportUnboundVariable = true
 reportUndefinedVariable = false
 venv = ".venv"
 venvPath= "."
+
+[tool.mypy]
+ignore_missing_imports = true
+plugins = [
+  "sqlmypy"
+]
+disable_error_code = [
+  "misc"
+]
+
+[tool.coverage.run]
+omit = [
+  "quetz/tests/*",
+]
