Add GCS env vars.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,6 +6,10 @@ on:
     branches:
       - main
 
+env:
+  GCS_PROJECT: qc-oss-mamba-org-quetz-dev
+  GCS_TOKEN: ${{ secrets.GCS_TOKEN }}
+
 jobs:
   test_quetz:
     runs-on: ${{ matrix.os }}
