--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -46,15 +46,15 @@ jobs:
           - 6379:6379
     steps:
       - uses: actions/checkout@v2
-
+      - name: write gcs token file
+        run: |
+          pwd
+          mkdir $(dirname "${GCS_TOKEN}")
+          echo "${GCS_TOKEN_CONTENT}" > "${GCS_TOKEN}"
       - name: install mamba
         uses: mamba-org/setup-micromamba@v1
         with:
           environment-file: environment.yml
-      - name: write gcs token file
-        run: |
-          mkdir $(dirname "${GCS_TOKEN}")
-          echo "${GCS_TOKEN_CONTENT}" > "${GCS_TOKEN}"
       - name: test quetz
         shell: bash -l -eo pipefail {0}
         env:
