--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -48,6 +48,8 @@ jobs:
       - uses: actions/checkout@v2
       - name: write gcs token file
         run: |
+          ls -lhs /home/runner/work/
+          ls -lhs /home/runner/work/quetz/
           ls -lha /
           pwd
           mkdir $(dirname "${GCS_TOKEN}")
