--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,7 +8,7 @@ on:
 
 env:
   GCS_PROJECT: qc-oss-mamba-org-quetz-dev
-  GCS_TOKEN: /etc/gcs/token.json
+  GCS_TOKEN: /home/runner/gcs/token.json
   GCS_TOKEN_CONTENT: ${{ secrets.GCS_TOKEN }}
 
 jobs:
@@ -48,10 +48,7 @@ jobs:
       - uses: actions/checkout@v2
       - name: write gcs token file
         run: |
-          ls -lhs /home/runner/work/
-          ls -lhs /home/runner/work/quetz/
-          ls -lha /
-          pwd
+          whoami
           mkdir $(dirname "${GCS_TOKEN}")
           echo "${GCS_TOKEN_CONTENT}" > "${GCS_TOKEN}"
       - name: install mamba
