--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,6 +3,9 @@ name: CI
 on:
   pull_request_target:
     types: [assigned, opened, synchronize, reopened]
+  push:
+    branches:
+      - main
 
 env:
   GCS_PROJECT: qc-oss-mamba-org-quetz-dev
