--- a/environment.yml
+++ b/environment.yml
@@ -49,5 +49,6 @@ dependencies:
   - mamba
   - conda-content-trust
   - pyinstrument
+  - pydantic
   - pip:
       - git+https://github.com/jupyter-server/jupyter_releaser.git@v2
