--- a/setup.cfg
+++ b/setup.cfg
@@ -37,6 +37,7 @@ install_requires =
   pydantic>=2.0.0
   pyyaml
   requests
+  rq
   sqlalchemy
   sqlalchemy-utils
   tenacity
@@ -82,5 +83,24 @@ dev =
   pytest-cov
   pytest-timeout
   tbump
+  %(mypy)s
+mypy =
+  mypy
+  sqlalchemy-stubs
+  types-Jinja2
+  types-aiofiles
+  types-appdirs
+  types-click
+  types-mock
+  types-orjson
+  types-pkg-resources
+  types-pluggy
+  types-psycopg2
+  types-redis
+  types-requests
+  types-six
+  types-toml
+  types-ujson
+  types-urllib3
 test =
   %(dev)s
