--- a/environment.yml
+++ b/environment.yml
@@ -50,6 +50,7 @@ dependencies:
   - conda-content-trust
   - pyinstrument
   - pytest-asyncio
+  - pytest-timeout
   - pydantic >=2
   - pip:
       - git+https://github.com/jupyter-server/jupyter_releaser.git@v2
