add S3_BUCKET_NAME env variable

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -68,6 +68,7 @@ jobs:
           S3_SECRET_KEY: ${{ secrets.s3_secret_key }}
           S3_ENDPOINT: https://s3.sbg.cloud.ovh.net/
           S3_REGION: sbg
+          S3_BUCKET_NAME: quetz
         run: |
           # install dev dependencies
           pip install -e .[all,dev]
@@ -85,6 +86,7 @@ jobs:
           S3_SECRET_KEY: ${{ secrets.s3_secret_key }}
           S3_ENDPOINT: https://s3.sbg.cloud.ovh.net/
           S3_REGION: sbg
+          S3_BUCKET_NAME: quetz
         run: |
           if [ "$TEST_DB_BACKEND" == "postgres" ]; then
             export QUETZ_TEST_DATABASE="postgresql://postgres:mysecretpassword@${POSTGRES_HOST}:${POSTGRES_PORT}/postgres"
@@ -109,6 +111,7 @@ jobs:
           S3_SECRET_KEY: ${{ secrets.s3_secret_key }}
           S3_ENDPOINT: https://s3.sbg.cloud.ovh.net/
           S3_REGION: sbg
+          S3_BUCKET_NAME: quetz
         run: |
           if [ "$TEST_DB_BACKEND" == "postgres" ]; then
             export QUETZ_TEST_DATABASE="postgresql://postgres:mysecretpassword@${POSTGRES_HOST}:${POSTGRES_PORT}/postgres"
