try setting QUETZ_S3_BUCKET_NAME in ci

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -69,6 +69,7 @@ jobs:
           S3_ENDPOINT: https://s3.sbg.cloud.ovh.net/
           S3_REGION: sbg
           S3_BUCKET_NAME: quetz
+          QUETZ_S3_BUCKET_NAME: quetz
         run: |
           # install dev dependencies
           pip install -e .[all,dev]
@@ -86,6 +87,7 @@ jobs:
           S3_ENDPOINT: https://s3.sbg.cloud.ovh.net/
           S3_REGION: sbg
           S3_BUCKET_NAME: quetz
+          QUETZ_S3_BUCKET_NAME: quetz
         run: |
           if [ "$TEST_DB_BACKEND" == "postgres" ]; then
             export QUETZ_TEST_DATABASE="postgresql://postgres:mysecretpassword@${POSTGRES_HOST}:${POSTGRES_PORT}/postgres"
