add debug statements to find where env variable is lost

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -99,6 +99,10 @@ jobs:
           fi
 
           export QUETZ_IS_TEST=1
+
+          echo "S3_BUCKET_NAME: $S3_BUCKET_NAME"
+          echo "QUETZ_S3_BUCKET_NAME: $QUETZ_S3_BUCKET_NAME"
+
           pytest -v ./quetz/tests/ --cov-config=pyproject.toml --cov=. --cov-report=xml
 
       - name: Test the plugins
