--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -68,12 +68,12 @@ jobs:
           S3_SECRET_KEY: ${{ secrets.s3_secret_key }}
           S3_ENDPOINT: https://s3.sbg.cloud.ovh.net/
           S3_REGION: sbg
+          S3_BUCKET_NAME: quetz
         run: |
           # install dev dependencies
           pip install -e .[all,dev]
           pip install redis rq
           pip install pytest-github-actions-annotate-failures
-
       - name: Testing server
         shell: bash -l -eo pipefail {0}
         env:
@@ -85,6 +85,7 @@ jobs:
           S3_SECRET_KEY: ${{ secrets.s3_secret_key }}
           S3_ENDPOINT: https://s3.sbg.cloud.ovh.net/
           S3_REGION: sbg
+          S3_BUCKET_NAME: quetz
         run: |
           if [ "$TEST_DB_BACKEND" == "postgres" ]; then
             export QUETZ_TEST_DATABASE="postgresql://postgres:mysecretpassword@${POSTGRES_HOST}:${POSTGRES_PORT}/postgres"
@@ -96,6 +97,7 @@ jobs:
           fi
 
           export QUETZ_IS_TEST=1
+
           pytest -v ./quetz/tests/ --cov-config=pyproject.toml --cov=. --cov-report=xml
 
       - name: Test the plugins
@@ -109,6 +111,7 @@ jobs:
           S3_SECRET_KEY: ${{ secrets.s3_secret_key }}
           S3_ENDPOINT: https://s3.sbg.cloud.ovh.net/
           S3_REGION: sbg
+          S3_BUCKET_NAME: quetz
         run: |
           if [ "$TEST_DB_BACKEND" == "postgres" ]; then
             export QUETZ_TEST_DATABASE="postgresql://postgres:mysecretpassword@${POSTGRES_HOST}:${POSTGRES_PORT}/postgres"
