--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,3 +1,4 @@
+exclude: (quetz/migrations)
 repos:
   - repo: https://github.com/pycqa/isort
     rev: 5.12.0
@@ -41,3 +42,8 @@ repos:
     rev: v1.1.314
     hooks:
       - id: pyright
+  - repo: https://github.com/Quantco/pre-commit-mirrors-typos
+    rev: 1.16.26
+    hooks:
+      - id: typos-conda
+        exclude: (quetz/tests/authentification/test_oauth.py)
