--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,6 +14,8 @@ env:
 
 jobs:
   test_quetz:
+    # timeout for the whole job
+    timeout-minutes: 10
     runs-on: ${{ matrix.os }}
     strategy:
       fail-fast: false
@@ -76,6 +78,8 @@ jobs:
           pip install pytest-github-actions-annotate-failures
       - name: Testing server
         shell: bash -l -eo pipefail {0}
+        # timeout for the step
+        timeout-minutes: 5
         env:
           TEST_DB_BACKEND: ${{ matrix.test_database }}
           QUETZ_TEST_DBINIT: ${{ matrix.db_init }}
@@ -98,7 +102,7 @@ jobs:
 
           export QUETZ_IS_TEST=1
 
-          pytest -v ./quetz/tests/ --cov-config=pyproject.toml --cov=. --cov-report=xml
+          pytest -v ./quetz/tests/ --cov-config=pyproject.toml --cov=. --cov-report=xml  --capture=no
 
       - name: Test the plugins
         shell: bash -l -eo pipefail {0}
